--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "resend": "^4.3.0",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
+    "stripe": "^18.1.0",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
